--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://lucetre.github.io/2048/",
   "license": "MIT",
   "dependencies": {
+    "caniuse-lite": "^1.0.30001396",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tiny-invariant": "^1.1.0",
