--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "homepage": "https://lucetre.github.io/2048/",
   "license": "MIT",
   "dependencies": {
+    "i": "^0.3.7",
+    "npm": "^8.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-swipeable": "^7.0.0",
     "tiny-invariant": "^1.1.0",
     "use-debounce": "^7.0.0",
     "web-vitals": "^1.0.1"
